# deborgen

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  api.md  architecture.md  main.py  pyproject.toml  quickstart.md  roadmap.md
.github/workflows/: ci.yml
cmd/worker/: go.mod  main.go
deborgen-labs/: 00-run-it.md  01-phase-a-tests.md  02-answers.md  02-code-reading.md  03-go-heartbeat.md  04-go-job-execution.md  05-go-artifacts.md  06-go-cli.md  README.md  admin.md  code-map.md  context-managers-and-locks.md  go-guide.md  learning-plan.md  pytest-fixtures.ipynb
docs/ops/: architectural-evolution-A-B-C.md  deployment.md  go-hybrid-plan.md  ops-notes-2026-02-26.md  ops-notes-2026-02-27.md  ops-notes-2026-02-28-shared-droplet.md  phase-a-notes.md  phase-b-notes.md  phase-c-notes.md  sandboxing.md  server-profile.md  worker-state.md  writing-phase-a-tests.md
examples/: 01_hello_worker.py  02_count_primes.py  02_monte_carlo_pi.py
ops/env/: coordinator.env.example
ops/systemd/: deborgen-coordinator.service
src/deborgen/cli/: get_job.py  list_jobs.py  submit_example.py  tutorial.py  watch_job.py
src/deborgen/coordinator/: app.py
src/deborgen/worker/: agent.py
tests/: conftest.py  test_artifacts.py  test_auth.py  test_cli_entrypoints.py  test_cli_helpers.py  test_health.py  test_job_ownership_conflict.py  test_jobs_lifecycle.py  test_lease_expiry.py  test_logs_roundtrip.py  test_scheduling.py  test_work_hours.py  test_worker_agent.py
