[project]
name = "deborgen"
version = "0.1.0"
description = "A lightweight distributed compute cooperative for friends."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sacchen" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
