[project]
name = "deborgen"
version = "0.1.0"
description = "A lightweight distributed compute cooperative for friends."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sacchen" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
deborgen-coordinator = "deborgen.coordinator.app:main"
deborgen-get-job = "deborgen.cli.get_job:main"
deborgen-list-jobs = "deborgen.cli.list_jobs:main"
deborgen-submit-example = "deborgen.cli.submit_example:main"
deborgen-tutorial = "deborgen.cli.tutorial:main"
deborgen-watch-job = "deborgen.cli.watch_job:main"
deborgen-worker = "deborgen.worker.agent:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
pretty = true
